syntax = "proto3";

package server.rpc;

// 错误码
enum BiliUpstreamErrorType {
    // 正常
    Ok = 0;
    // 应用程序不存在或已被封禁, code = -1
    ApiFatal = 1;
    // API校验密匙错误, code = -3
    ApiSignInvalid = 2;
    // Access Key错误, code = -2; 
    // 用户未登录, code = -101; 
    // 使用登录状态访问了，并且登录状态无效，客服端可以／需要删除登录状态, code = 61000
    LoginInvalid = 10;
    // 账号被封停, code = -102;
    UserIsBanned = 11;
    // 请求错误, code = -400, 可能是appkey不合法
    // 请求未授权, code = -401
    ReqInvalid = 20;
    // 访问权限不足, code = -403
    ReqAccessDenied = 21;
    // 啥都木有, code = -404
    ReqNotFound = 22;
    // 请求被拦截, code = -412, 客户端ip服务端风控
    ReqFatal = 23;
    // 鉴权失败，请联系账号组, code = -663, 即appkey和access_key, mobi_app等不对应
    ReqAppkeyInvalid = 24;
    // -663, code = -663, 可能是此鉴权相关api已经被弃用
    ReqApiDeprecated = 25;
    // 被降级过滤的请求, code = -1200, 爬虫限制
    ReqCrawlerLimit = 26;
    // 服务器错误, code = -500
    ServerInternal = 31;
    // 过载保护,服务暂不可用, code = -503
    ServerOverload = 32;
    // 服务调用超时, code = -504
    ServerTimeout = 33;
    // 处理失败, code = -10500, 确认为DRM限制IP为家宽
    ResDrmLimit = 40;
    // 大会员专享限制, code = -10403
    // 开通大会员观看, code = 6002105
    ResVipOnly = 41;
    // 抱歉您所在地区不可观看！, code = -10403
    // 抱歉您所在地区不可观看！, code = 6002105
    // ??? , code = 6010001
    ResAreaLimit = 42;
    // 抱歉您所使用的平台不可观看！, code = -10403
    ResPlatformLimit = 43;
    /// 其他
    Unknown = 100;
}

message BiliUpstreamError {
    BiliUpstreamErrorType type = 1;
    BiliUpstreamErrorDetails details = 2;
}

message BiliUpstreamErrorDetails {
    int64 code = 1;
    string message = 2;
    string raw_query = 10;
    string raw_response_body = 11;
    map<string, string> raw_response_header = 12;
}